@@ -1,6 +1,7 @@
 0.03
  - Add Map::Tube::NYC and Map::Tube::Sofia to SEE ALSO section in doc.
  - Add Map::Tube::Warsaw to SEE ALSO section in doc.
+ - Fix Florenc station in XML map.
  - Update LICENSE AND COPYRIGHT section in doc.
 
 0.02 2014-11-30T23:14:14+01:00
